# aaart

./: Get-CharacterSize.ps1  README.md  pyproject.toml
src/aaart/: cli.py  downsampler.py  image.py
src/aart/: aart.py  cli.py  image.py
tests/: expected_logo_output.txt  test_aart.py  test_image.py
