[project]
name = "aart"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Stober", email = "marcstober@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
]

[project.scripts]
aart = "aart:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
