[project]
name = "aaart"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Stober", email = "marcstober@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "pyfiglet>=1.0.3",
]

[project.scripts]
aaart = "aaart:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
